--- a/CommonRes/src/main/res/values/strings.xml
+++ b/CommonRes/src/main/res/values/strings.xml
@@ -10,7 +10,7 @@
 
 
     <!--Home module-->
-    <string name="public_home_location">桂林</string>
+    <string name="public_home_location">深圳</string>
     <string name="public_home_where_to_live">你想住在哪？</string>
 
 
